# jansjo-dimmer

./: README.md
data/dutycycle-f/: data.txt  plotit.scr
gerbers/: tidy-gerbers
gerbers/gerbers-v2-2017-09-26/: LED-dimmer-B.Mask.gbs  LED-dimmer-Edge.Cuts.gm1  LED-dimmer-F.Mask.gts
gerbers/gerbers-v2-2017-09-26/tidy/: dimmer-NPTH.TXT  dimmer.GBL  dimmer.GBO  dimmer.GBP  dimmer.GTL  dimmer.GTO  dimmer.GTP  dimmer.TXT
kicad/: LED-dimmer-cache.lib  LED-dimmer-rescue.lib  LED-dimmer.bak  LED-dimmer.kicad_pcb  LED-dimmer.kicad_pcb-bak  LED-dimmer.net  LED-dimmer.pro  LED-dimmer.sch  fp-lib-table
kicad/led-dimmer.pretty/: Bourns-PTA3043-Slide-Potentiometer.kicad_mod  C_0603.kicad_mod  D_SOD-123.kicad_mod  Molex-KK22057028-2way-2.54mm-Right-Angled-Header.kicad_mod  MountingHole_2.0mm.kicad_mod  MountingHole_3.2mm_M3_DIN965.kicad_mod  R_0603.kicad_mod  SOIC-8_3.9x4.9mm_Pitch1.27mm.kicad_mod  TO-263-2.kicad_mod
panel/: LICENSE  README.md  led-dimmer-panel.cabal
panel/src/: pdf.hs
